# froid

./: .gitignore  LICENSE  README.md  README.rst  __init__.py  setup.cfg
.github/workflows/: static.yml
docs/: api.rst  conf.py  contribute.rst  index.rst
froid/: __init__.py  datasets.py  interpretation.py  plotting.py  preprocessing.py  quantification.py  transcription.py  utils.py  visualization.py
