[metadata]
name = froid
version = 0.0.0
author = Remington Mallett
author_email = mallett.remy@gmail.com
description = Dream analysis in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remrama/froid
project_urls =
    Homepage = https://github.com/remrama/froid
    Source = https://github.com/remrama/froid
    Bug Tracker = https://github.com/remrama/froid/issues
    Release Notes = https://github.com/remrama/froid/releases
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research

[options]
python_requires = >=3.8
install_requires =
    matplotlib
    numpy
    pandas
    scipy
